# itunes-walkman-playlist-converter

./: .gitignore  README.md  itunes_to_walkman_playlist.py  playlist-converter  playlist_converter.py  playlist_converter.sh  pyproject.toml  walkman_to_itunes_playlist.py
